--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
                 <form>
                     <div class="group-data two-columns">
                         <label for="#">Nombres y Apellidos:</label>
-                        <input type="text" placeholder="Escribe aquí" id="nombre">
+                        <input type="text" placeholder="Escribe aquí" id="nombre" required>
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Teléfono:</label>
-                        <input type="number" placeholder="Escribe aquí" id="telefono">
+                        <input type="number" placeholder="Escribe aquí" id="telefono" required>
                     </div>
                     <div class="group-data one-column">
                         <label for="#">Email:</label>
-                        <input type="email" placeholder="Escribe aquí" id="email">
+                        <input type="email" placeholder="Escribe aquí" id="email" required>
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Monto a Invertir:</label>
-                        <input type="number" placeholder="Escribe aquí" id="inversion">
+                        <input type="number" placeholder="Escribe aquí" id="inversion" required>
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Tiempo de Inversión:</label>
-                        <select id="tiempo">
+                        <select id="tiempo" required>
                             <option>Elige una opción</option>
                             <option value="1">1 Año</option>
                             <option value="2">2 Años</option>
@@ -43,7 +43,7 @@
                         </select>
                     </div>
 
-                    <button id="calcular" type="button">CALCULAR</button>
+                    <button id="calcular" type="submit">CALCULAR</button>
                 </form>
 
             </div>
