--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
                 <form>
                     <div class="group-data two-columns">
                         <label for="#">Nombres y Apellidos:</label>
-                        <input type="text" placeholder="Escribe aquí" id="nombre" required>
+                        <input type="text" placeholder="Escribe aquí" id="nombre">
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Teléfono:</label>
-                        <input type="number" placeholder="Escribe aquí" id="telefono" required>
+                        <input type="number" placeholder="Escribe aquí" id="telefono">
                     </div>
                     <div class="group-data one-column">
                         <label for="#">Email:</label>
-                        <input type="email" placeholder="Escribe aquí" id="email" required>
+                        <input type="email" placeholder="Escribe aquí" id="email">
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Monto a Invertir:</label>
-                        <input type="number" placeholder="Escribe aquí" id="inversion" required>
+                        <input type="number" placeholder="Escribe aquí" id="inversion">
                     </div>
                     <div class="group-data two-columns">
                         <label for="#">Tiempo de Inversión:</label>
-                        <select id="tiempo" required>
+                        <select id="tiempo">
                             <option>Elige una opción</option>
                             <option value="1">1 Año</option>
                             <option value="2">2 Años</option>
