--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
     </section>
 
 
+    <footer>
+        <h2>Developer Alejandro Hernandez</h2>
+        <div class="iconos">
+            <a href="https://github.com/Alejandro120204hs" class="github"><img src="img/github (2).png" alt=""></a>
+            <a href="mailto:alejandro1202hs@gmail.com" class="correo"><img src="img/gmail (1).png" alt=""></a>
+            <a href="https://www.instagram.com/alejandro_hernandez1202?igsh=bXQyemo1ZWt1aHdz&utm_source=qr" class="instagram"><img src="img/logotipo-de-instagram.png" alt=""></a>
+        </div>
+    </footer>
+
+
     <script src="js/main.js"></script>
 </body>
 </html>
