Modificaciones en el footer

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 
 
     <footer>
-        <h2>Developer Alejandro Hernandez</h2>
+        <h2>Developer: Alejandro Hernandez</h2>
         <div class="iconos">
+            
+            <a href="mailto:alejandro1202hs@gmail.com" class="correo"><img src="img/correo-electronico.png" alt=""></a>
             <a href="https://github.com/Alejandro120204hs" class="github"><img src="img/github (2).png" alt=""></a>
-            <a href="mailto:alejandro1202hs@gmail.com" class="correo"><img src="img/gmail (1).png" alt=""></a>
-            <a href="https://www.instagram.com/alejandro_hernandez1202?igsh=bXQyemo1ZWt1aHdz&utm_source=qr" class="instagram"><img src="img/logotipo-de-instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/alejandro_hernandez1202?igsh=bXQyemo1ZWt1aHdz&utm_source=qr" class="instagram"><img src="img/instagram (1).png" alt=""></a>
         </div>
     </footer>
 
